--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav>
-  <h1>My Blog Application</h1>
+<nav class="title-nav">
+  <h1>Edumetric</h1>
 </nav>
 <main>
   <router-outlet></router-outlet>
