--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,11 +1,12 @@
-<mat-card>
-    <mat-card-header class="mat-card-header">
+@if(postDetails){
+<mat-card class="card-container">
+    <mat-card-header >
         <mat-card-title> {{ postDetails.title }}</mat-card-title>
-        <mat-card-subtitle class="mat-card-subtitle"> {{ postDetails.author }}</mat-card-subtitle>
+        <mat-card-subtitle > {{ postDetails.author }}</mat-card-subtitle>
     </mat-card-header>
-    <mat-divider></mat-divider>
-    <mat-card-content>
-        <p class="m-6">
+    <mat-divider inset="true"></mat-divider>
+    <mat-card-content class="text-red-300">
+        <p>
             {{ postDetails.content }}
         </p>
     </mat-card-content>
@@ -16,3 +17,4 @@
         }
     </mat-card-footer>
 </mat-card>
+}
