--- a/src/app/subject-posts/subject-posts.component.html
+++ b/src/app/subject-posts/subject-posts.component.html
@@ -1,9 +1,21 @@
-<h1> Posts for {{this.subjectName}} </h1>
-<div>
+<h2> Posts for {{this.subjectName}} </h2>
+<table mat-table [dataSource]="posts">
+  <ng-container matColumnDef="titre">
+    <th mat-header-cell *matHeaderCellDef> Titre </th>
+    <td mat-cell *matCellDef="let element"><a [routerLink]="['/posts', element.id]"> {{ element.title }} </a> </td>
+  </ng-container>
+  <ng-container matColumnDef="auteur">
+    <th mat-header-cell *matHeaderCellDef> Auteur </th>
+    <td mat-cell *matCellDef="let element"> {{ element.author }}</td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayCols"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayCols;"></tr>
+</table>
+<!--
 @for (post of posts; track $index) {
     <a [routerLink]="['/posts', post.id]" class="mt-3 px 4">
         <h3 class="text-purple-600"> {{ post.title }}</h3>
         <h4> {{ post.author }}</h4>
     </a>
 }
-</div>
+-->
