--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1 class="mt-6 px-5 text-center text-3xl"> Sujets </h1>
+<h1 class="page-title"> Sujets </h1>
 
 <nav class="flex-col">
 @for (subject of subjects; track $index) {
