--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,17 @@
 @use '@angular/material' as mat;
 
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 html {
   color-scheme: light dark;
   @include mat.theme((
@@ -7,9 +19,12 @@ html {
     typography: Noto Sans Display,
     density: 0
   ));
+  background: var(--mat-sys-surface);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
 }
 body {
-  background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font-family : Noto Sans Display;
 }
