--- a/src/app/subject-posts/subject-posts.component.html
+++ b/src/app/subject-posts/subject-posts.component.html
@@ -1,8 +1,7 @@
-<h2> Posts for {{this.subjectName}} </h2>
 <table mat-table [dataSource]="posts">
   <ng-container matColumnDef="titre">
     <th mat-header-cell *matHeaderCellDef> Titre </th>
-    <td mat-cell *matCellDef="let element"><a [routerLink]="['/posts', element.id]"> {{ element.title }} </a> </td>
+    <td mat-cell *matCellDef="let element"><a [routerLink]="['/posts', element._id]"> {{ element.title }} </a> </td>
   </ng-container>
   <ng-container matColumnDef="auteur">
     <th mat-header-cell *matHeaderCellDef> Auteur </th>
