--- a/src/app/post/post.component.scss
+++ b/src/app/post/post.component.scss
@@ -14,9 +14,18 @@
 .card-container {
   width: 50%;
   margin-left: 3vh;
-  p{
+  .post-content-container{
+    display:inline-block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-height : 100px;
+  }
+  span{
     color : var(--mat-sys-secondary);
-    padding-bottom: 30px;
   }
   color : var(--mat-sys-on-primary-container)
+}
+::ng-deep mat-grid-tile .mat-grid-tile-content{
+  align-items: flex-start;
+  justify-content: start;
 }
