--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -7,38 +7,61 @@
     <mat-divider></mat-divider>
     <mat-card-content class="text-red-300">
         <div class="post-content-container">
-        <p>
-            {{ postDetails.content }}
-        </p>
+        @if(!isPostEdit){
+          <p>
+              {{ postDetails.content }}
+          </p>
+        }
+        @else{
+          <mat-form-field class="content-form-field">
+            <mat-label>Contenu</mat-label>
+            <textarea matInput [(ngModel)]="postContent" rows="5" ></textarea>
+          </mat-form-field>
+        }
         </div>
         <mat-divider></mat-divider>
-        <mat-card-actions align="end">
-          <button mat-button (click)="openDialog()">Ajouter un commentaire </button>
-          <button mat-mini-fab (click)="deletePost()"><mat-icon>delete</mat-icon></button>
-        </mat-card-actions>
     </mat-card-content>
-    <mat-divider></mat-divider>
     <mat-card-footer>
-        <mat-list>
-          @for (comment of comments; track comment) {
-            <mat-list-item lines="5">
-              <mat-grid-list cols="4" rowHeight="50px">
-                <mat-grid-tile colspan="3" rowspan="1">
-                  <span matListItemTitle>{{comment.author}}</span>
-                </mat-grid-tile>
-                <mat-grid-tile colspan="3" rowspan="3">
-                  <p>{{comment.content}}</p>
-                </mat-grid-tile>
-                <mat-grid-tile colspan="1" rowspan="3">
-                  <button mat-mini-fab (click)="deleteComment(comment._id)"><mat-icon>delete_sweep</mat-icon></button>
-                </mat-grid-tile>
-              </mat-grid-list>
-              </mat-list-item>
-              @if($index < comments.length - 1){
-                <mat-divider inset="true"></mat-divider>
-              }
+        <mat-card-actions align="end">
+          @if(!isPostEdit){
+            <button mat-mini-fab (click)="openDialog()"><mat-icon>add_comment</mat-icon></button>
+            <button mat-mini-fab (click)="editPostContent()"><mat-icon>edit</mat-icon></button>
+            <button mat-mini-fab (click)="deletePost()"><mat-icon>delete</mat-icon></button>
           }
-        </mat-list>
+          @if(isPostEdit){
+            <button mat-mini-fab (click)="confirmPostEdit()"><mat-icon>check</mat-icon></button>
+            <button mat-mini-fab (click)="cancelPostEdit()"><mat-icon>close</mat-icon></button>
+          }
+        </mat-card-actions>
     </mat-card-footer>
 </mat-card>
+        <mat-card>
+          @for (comment of comments; track $index) {
+                <mat-card-header>
+                  <span matListItemTitle>{{comment.author}}</span>
+                </mat-card-header>
+                <mat-card-content>
+                  @if(!isCommentEdit){
+                    <p>{{comment.content}}</p>
+                  }
+                  @else{
+                   <mat-form-field class="content-form-field">
+                     <mat-label>commentaire</mat-label>
+                     <textarea matInput [(ngModel)]="commentContent" rows="2" ></textarea>
+                   </mat-form-field>
+                  }
+                </mat-card-content>
+                <mat-card-actions align="end">
+                  @if(!isCommentEdit){
+                    <button mat-mini-fab (click)="editCommentContent($index)"><mat-icon>mode</mat-icon></button>
+                    <button mat-mini-fab (click)="deleteComment(comment._id)"><mat-icon>delete_sweep</mat-icon></button>
+                  }
+                  @if(isCommentEdit){
+                    <button mat-mini-fab (click)="confirmCommentEdit($index)"><mat-icon>check</mat-icon></button>
+                    <button mat-mini-fab (click)="cancelCommentEdit()"><mat-icon>close</mat-icon></button>
+                  }
+                </mat-card-actions>
+          }
+        </mat-card>
+
 }
