--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,6 @@
-<h1 class="page-title"> Sujets </h1>
-
-<nav class="flex-col">
-@for (subject of subjects; track $index) {
-    <a [routerLink]="['subject', subject.name]" class="mt-3 px 4">
-        <h3 class="border-r-4 box-border"> {{ subject.name }}</h3>
-    </a>
-}
-</nav>
-
-<button mat-raised-button (click)="openDialog()"> Ajouter un sujet </button>
+<div class="landing-page">
+<div class="blurred-box">
+    <h1 class="page-title"> Sujets </h1>
+    <button mat-raised-button> Commencer</button>
+</div>
+</div>
